feat(api-jobs): store a new job
